--- a/web.html
+++ b/web.html
@@ -19,50 +19,45 @@
 
 <body>
   <div class="container">
-    <header class="cabecera total sitio web">
-      <div class="cabecera separada">
-        <div class="texto-central"
-          <a class="logo central" href="https://bit.ly/2qBuz2X">SysLearn</a>
-        </div>
-        <div class="parte-dch de la cabecera" >
-          <a class="texto-centro" href="#">
-            <svg class="buscador"xmlns="https://www.w3.org/2000/svg" width="25" height="30" viewBox = "-2 -2 22 22 " fill="none" stroke="lightblue" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-              <circle cx="7" cy="7" r="6" </circle>
-              <line x1="18" y1="18" x2="20" y2="20" style="stroke:rgb(62,255,244); stroke-width:15"/>
-            </svg>
-          </a>
-          <a class = "boton registrarse" href ="#">Registrarse</a>
+    <header class="head">
+
+
       </div>
     </header>
-<!--  <header>
-      <img src="https://bit.ly/2qBuz2X" width="150" height="50" alt="logo" />
-    <h1> Bienvenido </h1>
-  </header> -->
-   <nav>
-     <ul class = "naveg">
-     <li><a class="active" href="home">Página principal</a></li>
-     <li><a class="active" href="registro">Registrarse</a></li>
-     <li><a class="active" href="aprender">Learn</a></li>
-     <li><a class="active" href="retos">Challenges</a></li>
-     <li><a class="active" href="foro">Forum</a></li>
-     <li><a class="active" href="ranking">Ranking</a></li>
-     <li><a class="active" href="about">About</a></li>
+
+   <nav class="navbar navbar-expand-lg navbar-ligth fixed-top">
+     <a class = "imag"href="imagen.asp"><img src="https://bit.ly/2qBuz2X" style="width:55px;height:40px;border-radius:10px;" alt="logo"/>
+     <a class="navbar-brand" href="titulo">SysLearn</a>
+     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+     <ul class = "navbar-nav mr-3">
+     <li class="nav-item"><a class="nav-link" href="home">Página principal</a></li>
+     <li class="nav-item"><a class="nav-link" href="registro">Registrarse</a></li>
+     <li class="nav-item"><a class="nav-link" href="aprender">Learn</a></li>
+     <li class="nav-item"><a class="nav-link" href="retos">Challenges</a></li>
+     <li class="nav-item"><a class="nav-link" href="foro">Forum</a></li>
+     <li class="nav-item"><a class="nav-link" href="ranking">Ranking</a></li>
+     <li class="nav-item"><a class="nav-link" href="about">About</a></li>
    </ul>
+   <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Busqueda" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+    </form>
+  </div>
  </nav> <!--informacion google maps,correo, -->
 
  <div class="container-fluid">
    <div class="row">
-     <div class="col-md-2">.col-md-2</div>  <!--nombre_website-->
+     <div class="col-md-2">.col-md-2 .col-xs-3</div>  <!--nombre_website-->
      <div class="col-md-1">.col-md-1</div>
      <div class="col-md-1">.col-md-1</div>
      <div class="col-md-1">.col-md-1</div>
      <div class="col-md-1">.col-md-1</div>
+     <div class="col-md-1">.col-md-1</div>  <!--especificar un col-xs-2 para la etiqueta del menu que se va a formar de todas las etiquetas del menu de navegacion-->
      <div class="col-md-1">.col-md-1</div>
      <div class="col-md-1">.col-md-1</div>
-     <div class="col-md-1">.col-md-1</div>
-     <div class="col-md-1">.col-md-1</div> <!--buscar-->
-     <div class="col-md-1">.col-md-1</div> <!--login-->
-     <div class="col-md-1">.col-md-1</div> <!--signup -->
+     <div class="col-md-1">.col-md-1 .col-xs-3</div> <!--buscar-->
+     <div class="col-md-1">.col-md-1 .col-xs-2</div> <!--login-->
+     <div class="col-md-1">.col-md-1 .col-xs-2</div> <!--signup -->
    </div>
    <div class="row">
      <div class="col-md-12">.col-md-12</div>
@@ -71,6 +66,9 @@
      <div class="col-md-3">.col-md-3</div>
      <div class="col-md-6">.col-md-6</div>
      <div class="col-md-3">.col-md-3</div>
+   </div>
+   <div class="row">                                              <!--footer-->
+     <div class="col-md-4 offset-md-4">.col-md-4 .offset-md-4</div>
    </div>
  </div>
 
