--- a/web.html
+++ b/web.html
@@ -14,22 +14,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.js"></script>
-    <script src="functions.js" type="text/javascript"> </script>
+    <script src='functions.js' type="text/javascript"> </script>
 </head>
-
-<body>
-  <div class="container">
-    <header class="head">
-
-
-      </div>
-    </header>
 
    <nav class="navbar navbar-expand-lg navbar-ligth fixed-top">
      <a class = "imag"href="imagen.asp"><img src="https://bit.ly/2qBuz2X" style="width:55px;height:40px;border-radius:10px;" alt="logo"/>
      <a class="navbar-brand" href="titulo">SysLearn</a>
      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-     <ul class = "navbar-nav mr-3">
+     <ul class = "navbar-nav mr-6">
      <li class="nav-item"><a class="nav-link" href="home">Página principal</a></li>
      <li class="nav-item"><a class="nav-link" href="registro">Registrarse</a></li>
      <li class="nav-item"><a class="nav-link" href="aprender">Learn</a></li>
@@ -38,13 +30,17 @@
      <li class="nav-item"><a class="nav-link" href="ranking">Ranking</a></li>
      <li class="nav-item"><a class="nav-link" href="about">About</a></li>
    </ul>
-   <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Busqueda" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+   <form class="form-inline my-2">
+      <input class="form-control mr-sm-1" type="search" placeholder="Busqueda" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Buscar</button>
     </form>
   </div>
  </nav> <!--informacion google maps,correo, -->
-
+<body>
+  <header class="header">
+    <div class="cointainer"
+  </div>
+  </header>
  <div class="container-fluid">
    <div class="row">
      <div class="col-md-2">.col-md-2 .col-xs-3</div>  <!--nombre_website-->
