--- a/web.html
+++ b/web.html
@@ -19,16 +19,16 @@
 
    <nav class="navbar navbar-expand-lg navbar-ligth fixed-top">
      <a class = "imag"href="imagen.asp"><img src="https://bit.ly/2qBuz2X" style="width:55px;height:40px;border-radius:10px;" alt="logo"/>
-     <a class="navbar-brand" href="titulo">SysLearn</a>
+     <a class="navbar-brand" href="titulo">Sys-Learn</a>
      <div class="collapse navbar-collapse" id="navbarSupportedContent">
      <ul class = "navbar-nav mr-6">
      <li class="nav-item"><a class="nav-link" href="home">Página principal</a></li>
-     <li class="nav-item"><a class="nav-link" href="registro">Registrarse</a></li>
      <li class="nav-item"><a class="nav-link" href="aprender">Learn</a></li>
      <li class="nav-item"><a class="nav-link" href="retos">Challenges</a></li>
      <li class="nav-item"><a class="nav-link" href="foro">Forum</a></li>
      <li class="nav-item"><a class="nav-link" href="ranking">Ranking</a></li>
      <li class="nav-item"><a class="nav-link" href="about">About</a></li>
+     <li class="nav-item"><a class="nav-link" href="registro">Registrarse</a></li>
    </ul>
    <form class="form-inline my-2">
       <input class="form-control mr-sm-1" type="search" placeholder="Busqueda" aria-label="Search">
@@ -38,8 +38,13 @@
  </nav> <!--informacion google maps,correo, -->
 <body>
   <header class="header">
-    <div class="cointainer"
-  </div>
+    <div class="container">
+      <div class="titulo">
+        <h1>Sys-Learn </h1>   <!--anadir lo de font-style para el viewport que no funciona -->
+        <h2>Welcome to this amazing website.Here you can become a real programmer!:) </h2>
+        </div>
+    </div>
+
   </header>
  <div class="container-fluid">
    <div class="row">
