--- a/src/web.html
+++ b/src/web.html
@@ -41,11 +41,15 @@
     <div class="container">
       <div class="titulo">
         <h1>Sys-Learn </h1>   <!--anadir lo de font-style para el viewport que no funciona -->
-        <h2>Welcome to this amazing website.Here you can become a real programmer!:) </h2>
-        </div>
+        <h2>Welcome to this amazing website.</h2>
+        <p>Here you can become a real programmer!:) </p>
+      </div>
     </div>
-
   </header>
+  <div class="mainpage">
+    <div class="container">
+    </div>
+</div>
  <div class="container-fluid">
    <div class="row">
      <div class="col-md-2">.col-md-2 .col-xs-3</div>  <!--nombre_website-->
