metiendo partes de la pagina principal

--- a/web.html
+++ b/web.html
@@ -28,12 +28,13 @@
      <li class="nav-item"><a class="nav-link" href="foro">Forum</a></li>
      <li class="nav-item"><a class="nav-link" href="ranking">Ranking</a></li>
      <li class="nav-item"><a class="nav-link" href="about">About</a></li>
-     <li class="nav-item"><a class="nav-link" href="registro">Registrarse</a></li>
    </ul>
    <form class="form-inline my-2">
       <input class="form-control mr-sm-1" type="search" placeholder="Busqueda" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">Buscar</button>
+      <button class="btn btn-outline-success" type="submit">Registrarse</button>
     </form>
+
   </div>
  </nav> <!--informacion google maps,correo, -->
 <body>
@@ -46,24 +47,33 @@
       </div>
     </div>
   </header>
-  <hr>
   <div class="mainpage">
     <div class="container">
-      <div class="rowa">
-      <div class="col-lg-10 offset-lg-1">
+      <div class="uno">
+      <div class="col-lg-12">
         <h1> Bienvenido! </h1>
         <p> Esto es un mensaje de bienvenida para todos
             los nuevos usuarios de nuestra pagina, y que
             se familiaricen con nuestra pagina.Pulse el boton
             "See More" para mas informacion.</p>
       <button class="btn btn-outline-success" type="submit">See More</button>
-
-        bueno seria hacer una estructura de este tipo con todo lo que le metamos
-        
       </div>
     </div>
-</div>
-<hr>
+    <div class="dos">
+      <div class="col-lg-12">
+        <h1> Challenges! </h1>
+        <p> En esta seccion podras enfrentarte a los mejores
+            en diferentes retos de programacion, en el lenguaje
+            que mejor domines.</p>
+        <h2> Reto del Dia! </h2>
+        <h3> Full Metal Chemist #1:build me....</h3>
+        <p> El tema de este kata es crear dos clases:Molecula y Atomo
+            que te permitiran constuir equivalentes numericos de compuestos
+            organicos utilizando un conjunto de metodos y restituir
+            algunas de sus propiedades. </p>
+        <a class="imag" href="imagenn.asp">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Biotin-3D-balls.png/1024px-Biotin-3D-balls.png" alt = "Imagen molecula" style="width:50px;height:50px"/>
+        </div>
  <div class="container-fluid">
    <div class="row">
      <div class="col-md-2">.col-md-2 .col-xs-3</div>  <!--nombre_website-->
@@ -95,7 +105,7 @@
 <form action="datos.php" method="get">
   Username: <input type="text" name="usuario">
   Passwd: <input type="password" name="contraseña" >
-  Log: <input type="submit" name="entrar" >
+  Login: <input type="submit" name="entrar" >
   Reset: <input type="reset" name="borrar" >
 </form>
 
