--- a/src/web.html
+++ b/src/web.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="shortcut icon" type="image/x-icon" href="logo.ico"/>
   <style> body {padding: 0; margin: 0;} </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.js"></script>
@@ -19,10 +20,10 @@
 
    <nav class="navbar navbar-expand-lg navbar-ligth fixed-top">
      <a class = "imag"href="imagen.asp"><img src="https://bit.ly/2qBuz2X" style="width:55px;height:40px;border-radius:10px;" alt="logo"/>
-     <a class="navbar-brand" href="titulo">Sys-Learn</a>
+     <a class="navbar-brand" class="nav-link" href="web.html">Sys-Learn</a>
      <div class="collapse navbar-collapse" id="navbarSupportedContent">
      <ul class = "navbar-nav mr-6">
-     <li class="nav-item"><a class="nav-link" href="home">Página principal</a></li>
+     <!-- <li class="nav-item"><a class="nav-link" href="home">Página principal</a></li> -->
      <li class="nav-item"><a class="nav-link" href="aprender">Learn</a></li>
      <li class="nav-item"><a class="nav-link" href="retos">Challenges</a></li>
      <li class="nav-item"><a class="nav-link" href="foro">Forum</a></li>
@@ -119,43 +120,26 @@
   </div>
 </div>
 </div>
-<footer class="footer">
-  <div class="container">
+<footer class="page-footer dark-cyan">
+  <div class="container-fluid">
     <div class="row">
-      <div class="col-lg-8 offset-lg-2">
+      <div class="col-lg-2">
+        <h5> About us! </h5>
+        <p> Esta pagina se ha creado como proposito <br>
+            principal para la asignatura de SIPC <br>
+            ..
+        </p>
+      </div>
+        <div style="border-left:1px solid #8C857F;height:150px"></div>
+      <div class="col-lg-8">
+        <ul class="list-unstyled list-inline text-center">
+          
         <a href="#" class="fa fa-facebook white-text"></a>
-        <a href="#" class="fa fa-twitter white-text"></a>
+        <a href="https://twitter.com/ComanescuVlad" target="_blank" class="fa fa-twitter white-text"></a>
       </div>
     </div>
   </div>
 </footer>
-  <hr>
- <div class="container-fluid">
-   <div class="row">
-     <div class="col-md-2"></div>  <!--nombre_website-->
-     <div class="col-md-1"></div>
-     <div class="col-md-1"></div>
-     <div class="col-md-1"></div>
-     <div class="col-md-1"></div>
-     <div class="col-md-1"></div>  <!--especificar un col-xs-2 para la etiqueta del menu que se va a formar de todas las etiquetas del menu de navegacion-->
-     <div class="col-md-1"></div>
-     <div class="col-md-1"></div>
-     <div class="col-md-1"></div> <!--buscar-->
-     <div class="col-md-1"></div> <!--login-->
-     <div class="col-md-1"></div> <!--signup -->
-   </div>
-   <div class="row">
-     <div class="col-md-12"></div>
-   </div>
-   <div class="row">
-     <div class="col-md-3"></div>
-     <div class="col-md-6"></div>
-     <div class="col-md-3"></div>
-   </div>
-   <div class="row">                                              <!--footer-->
-     <div class="col-md-4 offset-md-4"></div>
-   </div>
- </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
