Cambiado el hipervinculo a firebase

--- a/src/web.html
+++ b/src/web.html
@@ -144,16 +144,16 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
-<script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.5.9/firebase.js"></script>
 <script>
   // Initialize Firebase
   var config = {
-    apiKey: "AIzaSyBGmb_6LCw7EunzxKmVkH2JcBUrLWf4apM",
-    authDomain: "pag-web-ccb38.firebaseapp.com",
-    databaseURL: "https://pag-web-ccb38.firebaseio.com",
-    projectId: "pag-web-ccb38",
-    storageBucket: "pag-web-ccb38.appspot.com",
-    messagingSenderId: "423804057015"
+    apiKey: "AIzaSyCI7HqBebjxlxbHvMXwVU4SkbeO_LGI_7w",
+    authDomain: "sys-learn.firebaseapp.com",
+    databaseURL: "https://sys-learn.firebaseio.com",
+    projectId: "sys-learn",
+    storageBucket: "sys-learn.appspot.com",
+    messagingSenderId: "197709160387"
   };
   firebase.initializeApp(config);
 </script>
