--- a/src/web.html
+++ b/src/web.html
@@ -22,14 +22,20 @@
      <a class="navbar-brand" href="titulo">Sys-Learn</a>
      <div class="collapse navbar-collapse" id="navbarSupportedContent">
      <ul class = "navbar-nav mr-6">
-     <li class="nav-item"><a class="nav-link" href="home">Página principal</a></li>
-     <li class="nav-item"><a class="nav-link" href="aprender">Learn</a></li>
-     <li class="nav-item"><a class="nav-link" href="retos">Challenges</a></li>
-     <li class="nav-item"><a class="nav-link" href="foro">Forum</a></li>
-     <li class="nav-item"><a class="nav-link" href="ranking">Ranking</a></li>
-     <li class="nav-item"><a class="nav-link" href="about">About</a></li>
-     <li class="nav-item"><a class="nav-link" href="registro">Registrarse</a></li>
-   </ul>
+       <li class="nav-item"><a class="nav-link" href="home">Página principal</a></li>
+       <li class="nav-item"><a class="nav-link" href="aprender">Learn</a></li>
+       <li class="nav-item"><a class="nav-link" href="retos">Challenges</a></li>
+       <li class="nav-item"><a class="nav-link" href="foro">Forum</a></li>
+       <li class="nav-item"><a class="nav-link" href="ranking">Ranking</a></li>
+       <li class="nav-item"><a class="nav-link" href="about">About</a></li>
+       <li class="nav-item">
+         <div class="popup" onclick="myFunction()" >Registrarse
+           <span class="popuptext" id="myPopup">
+             Popup text...
+           </span>
+         </div>
+       </li>
+      </ul>
    <form class="form-inline my-2">
       <input class="form-control mr-sm-1" type="search" placeholder="Busqueda" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">Buscar</button>
@@ -53,7 +59,11 @@
  <div class="container-fluid">
    <div class="row">
      <div class="col-md-2">.col-md-2 .col-xs-3</div>  <!--nombre_website-->
-     <div class="col-md-1">.col-md-1</div>
+     <div class="col-md-1">
+       <div class="popup" onclick="myFunction()">Click me!
+        <span class="popuptext" id="myPopup">Popup text...</span>
+        </div>
+      </div>
      <div class="col-md-1">.col-md-1</div>
      <div class="col-md-1">.col-md-1</div>
      <div class="col-md-1">.col-md-1</div>
@@ -108,5 +118,14 @@
   };
   firebase.initializeApp(config);
 </script>
+
+<script>
+// When the user clicks on <div>, open the popup
+function myFunction() {
+    var popup = document.getElementById("myPopup");
+    popup.classList.toggle("show");
+}
+</script>
+
 
 </html>
