--- a/src/web.html
+++ b/src/web.html
@@ -54,7 +54,26 @@
    <form class="form-inline my-2">
       <input class="form-control mr-sm-1" type="search" placeholder="Busqueda" aria-label="Search">
       <button class="btn btn-outline-success" type="submit">Buscar</button>
-      <button class="btn btn-outline-success" type="submit">Registrarse</button>
+        <a href="#container"><button class="btn btn-outline-success" type="button">Registrarse</button></a>
+           <div id="container">
+             <div class="popup">
+               <a href="#">
+                 <img  src="https://cdn3.iconfinder.com/data/icons/simple-web-navigation/165/cross-512.png" style="width:25px;height:25px;border-radius:80px;" />
+               </a>
+             </div>
+             <p> Login </p>
+               <input class="usuario/email" type="text" name="usuario" placeholder="usuario@email.com">
+               <input class="passwd" type="password" required="" name="contraseña" placeholder="Passwd">
+               <button class="buton registro">Login</button>
+             <p class="registrate">Registrarse</p>
+             <form action="datos.php" method="get">
+               Username: <input type="text" name="usuario">
+               Passwd: <input type="password" name="contraseña">
+               Login: <input type="submit" name="entrar">
+               Reset: <input type="reset" name="borrar">
+             </form>
+           </div>
+
     </form>
 
   </div>
