--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<html lang="en"
+<html lang="en">
 <head>
   <meta http-equiv="content-type" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,19 +12,19 @@
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="logo.ico"/>
   <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
-  <style> body {padding: 0; margin: 0;} </style>
+  <style> body {padding:0 ; margin: 0;} </style>
 
 </head>
 
    <nav class="navbar navbar-expand-lg navbar-ligth fixed-top">
-     <a class = "imag"href="imagen.asp"><img src="https://bit.ly/2qBuz2X" style="width:55px;height:40px;border-radius:10px;" alt="logo"/>
-     <a class="navbar-brand" class="nav-link" href="web.html">Sys-Learn</a>
+     <a class = "imag"href="index.asp"><img src="https://bit.ly/2qBuz2X" style="width:55px;height:40px;border-radius:10px;" alt="logo"/>
+     <a class="navbar-brand" class="nav-link" href="index.html">Sys-Learn</a>
      <div class="collapse navbar-collapse" id="navbarSupportedContent">
      <ul class = "navbar-nav mr-6">
      <!-- <li class="nav-item"><a class="nav-link" href="home">Página principal</a></li> -->
      <li class="nav-item"><a class="nav-link" href="aprender">Learn</a></li>
      <li class="nav-item"><a class="nav-link" href="retos">Challenges</a></li>
-     <li class="nav-item"><a class="nav-link" href="foro">Forum</a></li>
+     <li class="nav-item"><a class="nav-link" href="forum.html">Forum</a></li>
      <li class="nav-item"><a class="nav-link" href="ranking">Ranking</a></li>
      <li class="nav-item"><a class="nav-link" href="about">About</a></li>
    </ul>
@@ -38,7 +38,6 @@
                  <img  src="https://cdn3.iconfinder.com/data/icons/simple-web-navigation/165/cross-512.png" style="width:25px;height:25px;border-radius:80px;" />
                </a>
              </div>
-             <div class="container-fluid">
              <div id="login_ej" class="headerr">
                <a id="lock" class="btn-floating btn-li">
                <i class="fa fa-shield"></i></a>
@@ -91,43 +90,28 @@
   </div>
  </nav> <!--informacion google maps,correo, -->
 <body>
-  <header class="header">
-    <div class="container-fluid">
-      <div class="titulo">
-        <h1>Sys-Learn </h1>   <!--anadir lo de font-style para el viewport que no funciona -->
-        <h2>Welcome to this amazing website.</h2>
-        <h3>Here you can become a real programmer!:) </h3>
-      </div>
-    </div>
-  </header>
+  <div class ="body-main" >
+    <div class="body-center">
+      <header class="header">
+          <div class="titulo">
+            <h1>Sys-Learn </h1>   <!--anadir lo de font-style para el viewport que no funciona -->
+            <h2>Welcome to this amazing website.</h2>
+            <h3>Here you can become a real programmer!:) </h3>
+          </div>
+        </header>
   <div class="mainpage">
-    <div class="container-fluid">
       <div id="uno"class="row">
-      <div class="col-lg-6 offset-lg-2">
+      <div class="col-lg-6 offset-lg-2" >
         <hr>
         <h1> Bienvenido! </h1>
-        <p> Esto es un mensaje de bienvenida para todos<br>
-            los nuevos usuarios de nuestra pagina, y que<br>
-            se familiaricen con nuestra pagina.<br>
-             Pulse el boton "See More" para mas informacion.</p>
+        <p> Esto es un mensaje de bienvenida para todos<br>los
+          nuevos usuarios de nuestra pagina, y que se <br>
+          familiaricen con nuestra pagina.<br>
+            Pulse el boton "See More" para mas informacion.</p>
       <button class="btn btn-outline-success" type="submit">See More</button>
       <a id="bienv" class="btn-floating btn-li">
       <i class="fa fa-code"></i></a>
       <img src="https://media.giphy.com/media/OkJat1YNdoD3W/giphy.gif" alt="Welcome" />
-      <hr>
-    </div>
-    <div class="col-lg-2 offset-lg-2">
-      <div class="login">
-        <p> Login </p>
-        <form action="datos.php" method="get">
-        <input class="usuario/email" type="text" name="usuario" placeholder="usuario@email.com" id="text_field">
-        <input class="passwd" type="password" required name="contraseña" placeholder="Passwd" id="pass_field">
-        <button id="submit_btn" onclick="registro()">Entrar</button>
-        <input type="submit" name="registrar">
-        <input type="reset" name="reseteo">
-        <!-- <p class="registrate">Registrarse</p> -->
-      </form>
-      </div>
       <!-- <form action="datos.php" method="get">
         Username: <input type="text" name="usuario">
         Passwd: <input type="password" name="contraseña" >
@@ -153,7 +137,6 @@
         <i class="fa fa-code-branch"></i></a>
         <!-- <a class="imagg" href="imagenn.asp">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Biotin-3D-balls.png/1024px-Biotin-3D-balls.png" alt = "Imagen molecula" style="width:50px;height:50px"/> -->
-        <hr>
         </div>
       </div>
 
@@ -162,7 +145,6 @@
           <hr>
           <p>Learn to code in 60 days</br>
           Aprende los conceptos basicos de la programacion!</p>
-          <hr>
     </div>
   </div>
   <div class="row">
@@ -239,7 +221,7 @@
   </a>
     </div>
   </div>
-</div>
+
 </div>
 <footer class="page-footer">
   <div class="container-fluid">
@@ -318,6 +300,9 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
+
+</div>
+</div>
 </body>
 
 </html>
